[gd_scene load_steps=11 format=2]

[ext_resource path="res://Stages/Tilted Stick.gd" type="Script" id=1]
[ext_resource path="res://Game/StageManager.tscn" type="PackedScene" id=2]
[ext_resource path="res://Items/Words.tscn" type="PackedScene" id=3]
[ext_resource path="res://Items/Maze.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Square.png" type="Texture" id=5]
[ext_resource path="res://Items/Interactable.gd" type="Script" id=6]
[ext_resource path="res://Assets/Potato.png" type="Texture" id=7]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=8]

[sub_resource type="SegmentShape2D" id=1]
a = Vector2( 0, -256 )
b = Vector2( 0, 256 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 24.3069
height = 22.2767

[node name="Tilted Stick" type="Node2D"]
position = Vector2( 0, -2.45557 )
script = ExtResource( 1 )

[node name="StageManager" parent="." instance=ExtResource( 2 )]
goal_position = Vector2( 1180, 860 )

[node name="Words1" parent="." instance=ExtResource( 3 )]
position = Vector2( 514.4, 155.907 )
TEXT = "Without the potato,
the balance of European power
might never have tilted north."

[node name="Words2" parent="." instance=ExtResource( 3 )]
position = Vector2( 17.0803, 471.117 )
typing_speed = 4.5
TEXT = "You got it!"

[node name="Maze" parent="." instance=ExtResource( 4 )]
tile_data = PoolIntArray( 327680, 1, 0, 327681, 1, 0, 327682, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 10, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 10, 0, 327693, 1, 0, 327694, 1, 0, 327695, 1, 0, 327696, 1, 0, 327697, 1, 0, 327698, 1, 0, 327699, 1, 0, 393223, 0, 0, 393228, 0, 0, 458756, 3, 0, 458757, 12, 0, 458758, 14, 0, 458759, 9, 0, 458761, 14, 0, 458762, 1, 0, 458763, 1, 0, 458764, 5, 0, 524292, 0, 0, 524295, 0, 0, 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 5, 0, 589831, 7, 0, 589832, 1, 0, 589833, 1, 0, 589834, 12, 0, 589835, 14, 0, 589836, 1, 0, 589837, 1, 0, 589838, 4, 0, 655367, 0, 0, 655374, 0, 0, 720896, 1, 0, 720897, 12, 0, 720898, 3, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 2, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 4, 0, 720910, 0, 0, 786434, 0, 0, 786439, 0, 0, 786444, 11, 0, 786446, 0, 0, 851969, 1, 0, 851970, 5, 0, 851971, 14, 0, 851972, 4, 0, 851973, 14, 0, 851974, 1, 0, 851975, 8, 0, 851976, 1, 0, 851977, 12, 0, 851978, 14, 0, 851979, 1, 0, 851980, 4, 0, 851982, 0, 0, 917508, 0, 0, 917516, 0, 0, 917518, 0, 0 )

[node name="Stick" type="KinematicBody2D" parent="."]
modulate = Color( 0, 0.964706, 1, 1 )
position = Vector2( 1006.75, 714.544 )
collision_layer = 2
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stick"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Stick"]
scale = Vector2( 0.25, 8 )
texture = ExtResource( 5 )

[node name="Potato" type="Area2D" parent="."]
position = Vector2( 139.218, 578.178 )
collision_layer = 2
script = ExtResource( 6 )
item_name = "potato"

[node name="Sprite" type="Sprite" parent="Potato"]
position = Vector2( -0.99513, -1.32684 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Potato"]
position = Vector2( -3.76312, -3.76306 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Player" parent="." instance=ExtResource( 8 )]
position = Vector2( 440, 70 )

[connection signal="started" from="StageManager" to="." method="_on_StageManager_started"]
[connection signal="typing_end" from="StageManager" to="." method="_on_StageManager_typing_end"]
[connection signal="interacted" from="Potato" to="." method="_on_Potato_interacted"]
